--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="scripts.js"></script>
 </head>
 <body>
-    
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quo ut rerum ad ipsa unde, consequatur vero! Provident autem rerum, magni optio sapiente, doloribus, quaerat quod velit voluptates perferendis similique!</p>
+
 </body>
 </html>
