--- a/JS09/index.html
+++ b/JS09/index.html
@@ -8,16 +8,17 @@
     <title>Document</title>
 </head>
 <body>
-
-    <ul>
-        <li>choose a bike</li>
-        <li>buy bike</li>
-        <li>do bike fit</li>
-        <li>set up the work of all components</li>
-        <li>set uo tubeless tires</li>
-        <li>ride fast die young</li>
-    </ul>
-
+    <div id="do">
+        <h3>let`s ride</h3>
+        <ul>
+            <li><input placeholder="хотелку пиши в сюда" type="text" size="30" ></li>
+            <li>buy bike</li>
+            <li>do bike fit</li>
+            <li>set up the work of all components</li>
+            <li>set up tubeless tires</li>
+            <li>ride fast die young</li>
+        </ul>
+    </div>
 
 
 
