--- a/JS09/index.html
+++ b/JS09/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="do">
+    <div class="do">
         <h3>let`s ride</h3>
         <ul>
             <li><input placeholder="хотелку пиши в сюда" type="text" size="30" ></li>
