--- a/JS09/index.html
+++ b/JS09/index.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
 </head>
 <body>
-    <div class="list">
+    <!--<div class="do">
         <h3>let`s ride</h3>
         <ul>
             <li><input placeholder="хотелку пиши в сюда" type="text" size="30" ></li>
@@ -18,18 +17,7 @@
             <li>set up tubeless tires</li>
             <li>ride fast die young</li>
         </ul>
-    </div>
-
-
-
-
-
-
-
-
-
-
-
+    </div>-->
 
 
     <script src="js/scripts.js"></script>
