--- a/JS09/index.html
+++ b/JS09/index.html
@@ -4,22 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Document</title>
 </head>
 <body>
-    <!--<div class="do">
-        <h3>let`s ride</h3>
-        <ul>
-            <li><input placeholder="хотелку пиши в сюда" type="text" size="30" ></li>
-            <li>buy bike</li>
-            <li>do bike fit</li>
-            <li>set up the work of all components</li>
-            <li>set up tubeless tires</li>
-            <li>ride fast die young</li>
-        </ul>
-    </div>-->
-
-
-    <script src="js/scripts.js"></script>
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
