--- a/JS09/index.html
+++ b/JS09/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="HW_JS_09" content="Kaziuchyts Sasha">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HW_JS_09</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
