--- a/JS11/index.html
+++ b/JS11/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="homework" content="sasha kaziuchyts">
     <link rel="stylesheet" href="./css/styles.css">
-    
-    <title>Document</title>
+    <title>homework js 11</title>
 </head>
 <body>
     
