--- a/JS11.2/index.html
+++ b/JS11.2/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="homework" content="sasha kaziuchyts">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>homework js 11</title>
+    <script defer src="./js/scripts.js"></script>
+    <title>Document</title>
 </head>
 <body>
-    
-    <script src="./js/scripts.js"></script>
     
 </body>
 </html>
